test/files/neg/t6728.scala
object X {
  while(true) {
    for
  }
}
