test/files/neg/t6728.check
t6728.scala:4: error: '(' expected but '}' found.
  }
  ^
one error found
